--- a/style.css
+++ b/style.css
@@ -10,3 +10,44 @@ body {
 }
 
 /* Add styles here! */
+
+.max-width-wrapper {
+  width: fit-content;
+  padding: 64px 128px;
+}
+
+h1.title {
+  font-size: 2rem;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+section {
+  background: hsl(0deg, 0%, 60%);
+  border-top: hsl(0deg, 0%, 40%) solid 5px;
+}
+
+.card {
+ background: hsl(0deg, 0%, 100%);
+ margin-left: auto;
+ margin-right: auto;
+ min-width: 80%;
+ max-width: max-content;
+ padding-top: 1px;
+ border-bottom: hsl(0deg, 0%, 40%) solid 5px;
+}
+
+.card p {
+  padding: 4px 16px;
+}
+
+h2.indented-heading {
+  background: hsl(45deg, 100%, 50%);
+  width: fit-content;
+  border-bottom: hsl(45deg, 100%, 40%) solid 5px;
+  padding: 16px 32px;
+  margin-left: -8px;
+}
+
