--- a/style.css
+++ b/style.css
@@ -7,26 +7,34 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-size: 1.25rem;
 }
 
 /* Add styles here! */
 
 .max-width-wrapper {
-  width: fit-content;
-  padding: 64px 128px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.intro-chunk {
+  padding-top: 96px 0;
+  max-width: 400px;
 }
 
 h1.title {
   font-size: 2rem;
+  padding: 24px 0;
 }
 
 strong {
   color: hsl(160deg, 100%, 30%);
 }
 
-section {
+main {
   background: hsl(0deg, 0%, 60%);
   border-top: hsl(0deg, 0%, 40%) solid 5px;
+  padding: 96px 0;
 }
 
 .card {
@@ -35,12 +43,12 @@ section {
  margin-right: auto;
  min-width: 80%;
  max-width: max-content;
- padding-top: 1px;
+ padding-top: 8px;
  border-bottom: hsl(0deg, 0%, 40%) solid 5px;
 }
 
 .card p {
-  padding: 4px 16px;
+  padding: 4px 24px;
 }
 
 h2.indented-heading {
@@ -48,6 +56,6 @@ h2.indented-heading {
   width: fit-content;
   border-bottom: hsl(45deg, 100%, 40%) solid 5px;
   padding: 16px 32px;
+  margin: 0;
   margin-left: -8px;
 }
-
